# yt-uploader

./: .gitignore  README.md  bootstrap.sh  config.example.toml  install.sh  pyproject.toml
src/yt_uploader/: __main__.py  auth.py  config.py  daemon.py  fingerprint.py  notifier.py  processor.py  selector.py  setup_cli.py  state.py  youtube.py
systemd/: yt-uploader.service
